--- a/src/html/vip-deposits.html
+++ b/src/html/vip-deposits.html
@@ -109,8 +109,8 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text">рубли</p>
-											<p class="column__text">доллары США</p>
+											<p class="column__text column__text--bold">рубли</p>
+											<p class="column__text column__text--bold">доллары США</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -135,8 +135,8 @@
 													<h3>9 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">9,5</p>
-													<p class="column__text">0,9</p>
+													<p class="column__text">9,5%</p>
+													<p class="column__text">0,9%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -145,8 +145,8 @@
 													<h3>1 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">8</p>
-													<p class="column__text">0,8</p>
+													<p class="column__text">8,0%</p>
+													<p class="column__text">0,8%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -155,8 +155,8 @@
 													<h3>1,5 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7,5</p>
-													<p class="column__text">0,7</p>
+													<p class="column__text">7,5%</p>
+													<p class="column__text">0,7%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -165,8 +165,8 @@
 													<h3>2 года</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7,2</p>
-													<p class="column__text">0,5</p>
+													<p class="column__text">7,2%</p>
+													<p class="column__text">0,5%</p>
 												</div>
 											</div>
 										</div>
@@ -190,8 +190,8 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text">рубли</p>
-											<p class="column__text">доллары США</p>
+											<p class="column__text column__text--bold">рубли</p>
+											<p class="column__text column__text--bold">доллары США</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -216,8 +216,8 @@
 													<h3>3 месяца</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">12</p>
-													<p class="column__text">2</p>
+													<p class="column__text">12,0%</p>
+													<p class="column__text">2,0%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -226,8 +226,8 @@
 													<h3>6 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">10</p>
-													<p class="column__text">1,5</p>
+													<p class="column__text">10,0%</p>
+													<p class="column__text">1,5%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -236,8 +236,8 @@
 													<h3>9 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">9</p>
-													<p class="column__text">1</p>
+													<p class="column__text">9,0%</p>
+													<p class="column__text">1,0%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -246,8 +246,8 @@
 													<h3>1 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">8,5</p>
-													<p class="column__text">0,8</p>
+													<p class="column__text">8,5%</p>
+													<p class="column__text">0,8%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -256,8 +256,8 @@
 													<h3>1,5 года</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7</p>
-													<p class="column__text">0,7</p>
+													<p class="column__text">7%</p>
+													<p class="column__text">0,7,0%</p>
 												</div>
 											</div>
 										</div>
@@ -280,7 +280,7 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text">доллары США</p>
+											<p class="column__text column__text--bold">доллары США</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -304,7 +304,7 @@
 													<h3>3 месяца</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">1,5</p>
+													<p class="column__text">1,5%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -313,7 +313,7 @@
 													<h3>1,5 года</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">0,3</p>
+													<p class="column__text">0,3%</p>
 												</div>
 											</div>
 										</div>
@@ -336,8 +336,8 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text">рубли</p>
-											<p class="column__text">доллары США</p>
+											<p class="column__text column__text--bold">рубли</p>
+											<p class="column__text column__text--bold">доллары США</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -362,8 +362,8 @@
 													<h3>6 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">9,5</p>
-													<p class="column__text">1,2</p>
+													<p class="column__text">9,5%</p>
+													<p class="column__text">1,2%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -372,8 +372,8 @@
 													<h3>9 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">9</p>
-													<p class="column__text">1</p>
+													<p class="column__text">9,0%</p>
+													<p class="column__text">1,0%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -382,8 +382,8 @@
 													<h3>1 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7,5</p>
-													<p class="column__text">0,9</p>
+													<p class="column__text">7,5%</p>
+													<p class="column__text">0,9%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -392,8 +392,8 @@
 													<h3>1,5 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7,2</p>
-													<p class="column__text">0,8</p>
+													<p class="column__text">7,2%</p>
+													<p class="column__text">0,8%</p>
 												</div>
 											</div>
 										</div>
@@ -416,9 +416,9 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text column__text--flex30">рубли</p>
-											<p class="column__text column__text--flex30">доллары США</p>
-											<p class="column__text column__text--flex30">евро</p>
+											<p class="column__text column__text--bold column__text--flex30">рубли</p>
+											<p class="column__text column__text--bold column__text--flex30">доллары США</p>
+											<p class="column__text column__text--bold column__text--flex30">евро</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -444,9 +444,9 @@
 													<h3>3 месяца</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text column__text--flex30">15</p>
-													<p class="column__text column__text--flex30">3,2</p>
-													<p class="column__text column__text--flex30">2</p>
+													<p class="column__text column__text--flex30">15,0%</p>
+													<p class="column__text column__text--flex30">3,2%</p>
+													<p class="column__text column__text--flex30">2,0%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -455,9 +455,9 @@
 													<h3>6 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text column__text--flex30">14</p>
-													<p class="column__text column__text--flex30">3</p>
-													<p class="column__text column__text--flex30">1,5</p>
+													<p class="column__text column__text--flex30">14,0%</p>
+													<p class="column__text column__text--flex30">3,0%</p>
+													<p class="column__text column__text--flex30">1,5%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -466,9 +466,9 @@
 													<h3>9 месяцев</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text column__text--flex30">12</p>
-													<p class="column__text column__text--flex30">2,5</p>
-													<p class="column__text column__text--flex30">0,9</p>
+													<p class="column__text column__text--flex30">12,0%</p>
+													<p class="column__text column__text--flex30">2,5%</p>
+													<p class="column__text column__text--flex30">0,9%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -477,9 +477,9 @@
 													<h3>1 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text column__text--flex30">9</p>
-													<p class="column__text column__text--flex30">1,5</p>
-													<p class="column__text column__text--flex30">0,6</p>
+													<p class="column__text column__text--flex30">9,0%</p>
+													<p class="column__text column__text--flex30">1,5%</p>
+													<p class="column__text column__text--flex30">0,6%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -488,9 +488,9 @@
 													<h3>1,5 года</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text column__text--flex30">8</p>
-													<p class="column__text column__text--flex30">1,25</p>
-													<p class="column__text column__text--flex30">-</p>
+													<p class="column__text column__text--flex30">8,0%</p>
+													<p class="column__text column__text--flex30">1,25%</p>
+													<p class="column__text column__text--flex30">--</p>
 												</div>
 											</div>
 										</div>
@@ -513,8 +513,8 @@
 											<h3>Вид валюты</h3>
 										</div>
 										<div class="column__text-wrapper">
-											<p class="column__text">рубли</p>
-											<p class="column__text">доллары США</p>
+											<p class="column__text column__text--bold">рубли</p>
+											<p class="column__text column__text--bold">доллары США</p>
 										</div>
 									</div>
 									<div class="card__table-column">
@@ -539,8 +539,8 @@
 													<h3>1 год</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">8</p>
-													<p class="column__text">0,8</p>
+													<p class="column__text">8,0%</p>
+													<p class="column__text">0,8%</p>
 												</div>
 											</div>
 											<div class="columns__item">
@@ -549,8 +549,8 @@
 													<h3>2 года</h3>
 												</div>
 												<div class="column__text-wrapper">
-													<p class="column__text">7</p>
-													<p class="column__text">0,7</p>
+													<p class="column__text">7,0%</p>
+													<p class="column__text">0,7%</p>
 												</div>
 											</div>
 										</div>
